--- a/event/templates/event/delete_event.html
+++ b/event/templates/event/delete_event.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Delete Event</title>
-</head>
-<body>
+{% extends 'event\base.html' %}
+
+{% block title %} Delete {{ event.name }} {% endblock %}
+{% block content %}
     <h2>Are you sure you want to delete "{{ event.name }}"?</h2>
     <form method="POST">
         {% csrf_token %}
@@ -11,5 +9,5 @@
     </form>
     <br>
     <a href="{% url 'event_detail' pk=event.pk %}">Cancel</a>
-</body>
-</html>
+
+{% endblock %}
