--- a/event/templates/event/event_list.html
+++ b/event/templates/event/event_list.html
@@ -1,30 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event List</title>
-</head>
-<body>
+{% extends 'event/base.html' %}
+
+{% block title %} Home {% endblock %}
+{% block content %}
     {% if user.is_authenticated %}
-        <p>Welcome, {{ user.username }}!</p>
-        <form action="{% url 'logout' %}" method="post">
-            {% csrf_token %}
-            <button type="submit">Logout</button>
-        </form>
-        <h1>Event List</h1>
+        <h1 class="text-3xl font-bold text-center p-3">Event List</h1>
         {% for event in events %}
-            <a href="{% url 'event_detail' pk=event.pk %}">
+        <a href="{% url 'event_detail' pk=event.pk %}">
+
+        <div class="flex justify-between bg-gray-100 p-4 m-2 rounded-lg hover:shadow-lg transition-shadow duration-300 w-3/5 mx-auto">
+            <div>
                 <div>
-                    <h2>{{ event.name }}</h2>
-                    <h2>{{ event.organizer }}</h2>
-                    <h2>{{ event.in_charge }}</h2>
+                    <div class="flex gap-4">
+                        <h1 class="text-xl">{{ event.event_id }}.</h1>
+                        <h1 class="text-xl font-bold">{{ event.name }}</h1>
+                    </div>
+                    <div class="flex flex-col">
+                        <h2>Organizer: <span class="font-bold">{{ event.organizer }}</span></h2>
+                        <h2>In-Charge: <span class="font-bold">{{ event.in_charge }}</span></h2>
+                    </div>
                 </div>
+            </div>
+            <div class="mt-6">
+                <h2>Date: <span class="font-bold">{{ event.start_date }}</span></h2>
+                <h2>Venue: <span class="font-bold">{{ event.venue }}</span></h2>
+            </div>
+        </div>
             </a>
         {% endfor %}
         <a href="{% url 'create_event' %}">➕ Add New Event</a>
     {% else %}
         <p>You need to <a href="{% url 'login' %}">login</a> to view this page.</p>
     {% endif %}
-</body>
-</html>
+{% endblock %}
