--- a/event/templates/event/base.html
+++ b/event/templates/event/base.html
@@ -5,14 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> {% block title %}{% endblock %} | RSET DESCRIPTO </title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+    <style>
+        body{
+            font-family: 'Poppins', sans-serif;
+        }
+    </style>
 </head>
-<body>
+<body class="flex flex-col min-h-screen bg-gray-100">
 
     <header class="bg-gray-800 text-white p-4 flex justify-between items-center">
-        <h1 class="text-xl font-bold">RSET DESCRIPTO</h1>
+        <a href="{% url 'event_list' %}"><h1 class="text-xl font-bold">RSET DESCRIPTO</h1></a>
         <div>
             {% if user.is_authenticated %}
-                <p class="inline-block mr-4">Welcome, {{ user.username }}!</p>
+                <p class="inline-block mr-4">Welcome, {{ user.first_name }}!</p>
                 <form action="{% url 'logout' %}" method="post" class="inline-block">
                     {% csrf_token %}
                     <button type="submit" class="bg-red-500 hover:bg-red-700 text-white px-4 py-2 rounded">Logout</button>
@@ -23,7 +30,7 @@
         </div>
     </header>
 
-    <main >
+    <main class="flex-grow" >
         {% block content %}
         {% endblock %}
     </main>
