--- a/event/templates/event/delete_event.html
+++ b/event/templates/event/delete_event.html
@@ -2,12 +2,16 @@
 
 {% block title %} Delete {{ event.name }} {% endblock %}
 {% block content %}
-    <h2>Are you sure you want to delete "{{ event.name }}"?</h2>
-    <form method="POST">
-        {% csrf_token %}
-        <button type="submit">Yes, Delete</button>
-    </form>
-    <br>
-    <a href="{% url 'event_detail' pk=event.pk %}">Cancel</a>
 
+<div class="flex flex-col justify-center bg-white rounded-lg w-3/5 mx-auto p-5 mt-40">
+    <h2 class="text-center text-3xl font-bold mt-4">Are you sure you want to delete "{{ event.name }}"?</h2>
+    <div class="flex gap-2 justify-center mt-5">
+        <form method="POST">
+            {% csrf_token %}
+            <button type="submit" class="font-bold bg-red-500 hover:bg-red-700 text-white py-2 px-4 rounded">Yes, Delete</button>
+        </form>
+        <br>
+        <a href="{% url 'event_detail' pk=event.pk %}" class="font-bold bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded">Cancel</a>
+    </div>
+</div>
 {% endblock %}
