--- a/event/templates/event/event_detail.html
+++ b/event/templates/event/event_detail.html
@@ -5,7 +5,7 @@
     <a href="{% url 'event_list' %}">← Back to Home</a>
     
     <div class="flex flex-col">
-        <div class="flex flex-col bg-gray-100 p-4 m-2 rounded-lg w-3/5 mx-auto">
+        <div class="flex flex-col bg-white p-4 m-2 rounded-lg w-3/5 mx-auto">
             <h3>{{ event.event_id }}</h3>
             <h1 class="text-3xl font-bold text-center">{{ event.name }}</h1>
                 <div class="flex justify-between">
@@ -37,15 +37,25 @@
             </div>
             {% load group_tags %}
 
-            {% if user|has_group:"Moderators" %}
-            <form action="{% url 'approve_event' pk=event.pk %}" method="post" style="display:inline;">
-                {% csrf_token %}
-                <button type="submit">Approve</button>
-            </form>
-            <form action="{% url 'reject_event' pk=event.pk %}" method="post" style="display:inline;">
-                {% csrf_token %}
-                <button type="submit">Reject</button>
-            </form>
+                {% if user|has_group:"Moderators" %}
+            <div class="flex flex-col justify-center gap-4 mt-12 bg-white rounded-lg w-3/5 mx-auto p-4">
+                <p class="font-bold text-center text-2xl">EVENT PERMISSION</p>
+                <div class="flex justify-center gap-4">
+                    <form action="{% url 'approve_event' pk=event.pk %}" method="post" style="display:inline;">
+                        {% csrf_token %}
+                        <button type="submit" class="bg-green-500 hover:bg-green-700 text-white px-4 py-2 rounded">Approve</button>
+                    </form>
+                    <form action="{% url 'reject_event' pk=event.pk %}" method="post" style="display:inline;">
+                        {% csrf_token %}
+                        <button type="submit" class="bg-red-500 hover:bg-red-700 text-white px-4 py-2 rounded">Reject</button>
+                    </form>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+        <div class="flex justify-center gap-4">
+            {% if event.in_charge == user and event.status == 'Approved' %}
+                <a href="{% url 'update_event' pk=event.pk %}" class="bg-green-500 mt-2 hover:bg-green-700 text-white px-4 py-2 rounded">Update Event</a>
             {% endif %}
         </div>
     </div>
