--- a/event/templates/event/event_detail.html
+++ b/event/templates/event/event_detail.html
@@ -11,7 +11,7 @@
                 <div class="flex justify-between">
                     <div class="flex flex-col">
                         <h2>Organizer: <span class="font-bold">{{ event.organizer }}</span></h2>
-                        <h2>In-Charge: <span class="font-bold">{{ event.in_charge }}</span></h2>
+                        <h2>In-Charge: <span class="font-bold">{{ event.in_charge.first_name }}</span></h2>
                     </div>
 
                     <div>
@@ -20,7 +20,7 @@
                     </div>
                 </div>
 
-                <h2>Description:</h2>
+                <h2 class="mt-5">Description:</h2>
                 <p>{{ event.description }}</p><br>
 
                 <h4>Venue: <span class="font-bold">{{ event.venue }}</span></h4>
@@ -30,14 +30,16 @@
         </div>
         <div>
             <div class="flex justify-center gap-4">
-            {% if event.in_charge == user %}
+            {% if event.in_charge == user and not event.status == 'Closed' %}
                 <a href="{% url 'edit_event' pk=event.pk %}" class="bg-yellow-500 hover:bg-yellow-700 text-white px-4 py-2 rounded">Edit Event</a>
                 <a href="{% url 'delete_event' pk=event.pk %}" class="bg-red-500 hover:bg-red-700 text-white px-4 py-2 rounded">Delete</a>
             {% endif %}
             </div>
             {% load group_tags %}
 
-                {% if user|has_group:"Moderators" %}
+
+            <!--APPROVAL/REJECTION-->
+            {% if user|has_group:"Moderators" and not event.status == 'Closed' %}
             <div class="flex flex-col justify-center gap-4 mt-12 bg-white rounded-lg w-3/5 mx-auto p-4">
                 <p class="font-bold text-center text-2xl">EVENT PERMISSION</p>
                 <div class="flex justify-center gap-4">
@@ -58,6 +60,18 @@
                 <a href="{% url 'update_event' pk=event.pk %}" class="bg-green-500 mt-2 hover:bg-green-700 text-white px-4 py-2 rounded">Update Event</a>
             {% endif %}
         </div>
+    </div>
+
+    <div class="flex justify-center gap-4 mt-4">
+        {% if event.in_charge == user and not event.status == 'Closed'  %}
+            <form action="{% url 'send_event_files' pk=event.pk %}" method="post" 
+            onsubmit="return confirm('Are you sure you want to send the event files and mark this event as closed? Once closed no further changes shall be allowed.');">
+                {% csrf_token %}
+                <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white px-4 py-2 rounded">
+                    Close Event
+                </button>
+            </form>
+        {% endif %}
     </div>
 
     {% endblock %}
