--- a/event/templates/event/event_detail.html
+++ b/event/templates/event/event_detail.html
@@ -2,8 +2,10 @@
 
 {% block title %} {{ event.name }} {% endblock %}
 {% block content %}
-    <a href="{% url 'event_list' %}">← Back to Home</a>
-    
+
+    <div class="w-auto px-4 py-2 m-6 bg-gray-200 rounded-lg inline-block">
+    <a href="{% url 'event_list' %}">← Back</a>
+    </div>
     <div class="flex flex-col">
         <div class="flex flex-col bg-white p-4 m-2 rounded-lg w-3/5 mx-auto">
             <h3>{{ event.event_id }}</h3>
@@ -63,7 +65,7 @@
     </div>
 
     <div class="flex justify-center gap-4 mt-4">
-        {% if event.in_charge == user and not event.status == 'Closed'  %}
+        {% if event.in_charge == user and not event.status == 'Closed' and event.status == 'Approved'  %}
             <form action="{% url 'send_event_files' pk=event.pk %}" method="post" 
             onsubmit="return confirm('Are you sure you want to send the event files and mark this event as closed? Once closed no further changes shall be allowed.');">
                 {% csrf_token %}
