--- a/event/templates/event/event_list.html
+++ b/event/templates/event/event_list.html
@@ -35,9 +35,11 @@
 
         <!--EVENT LIST-->
         {% for event in events %}
+
+        <div class="m-2">
         <a href="{% url 'event_detail' pk=event.pk %}">
 
-        <div class="flex justify-between bg-white p-4 m-2 rounded-lg hover:shadow-lg transition-shadow duration-300 w-3/5 mx-auto">
+        <div class="flex justify-between bg-white p-4 rounded-lg hover:shadow-lg transition-shadow duration-300 w-3/5 mx-auto inline-block">
             <div>
                 <div>
                     <div class="flex gap-4">
@@ -55,25 +57,25 @@
                 <h2>Venue: <span class="font-bold">{{ event.venue }}</span></h2>
             </div>
         </div>
-            </a>
+            </a></div>
 
         {% empty %}
         <p class="text-4xl font-bold text-center">No Events Found.</p>
         {% endfor %}
 
         <a href="{% url 'create_event' %}">
-        <div class="fixed bottom-[100px] left-[20px] w-auto bg-blue-900 text-white p-4 rounded-3xl hover:shadow-xl transition-shadow duration-300 z-50">
+        <div class="fixed bottom-[100px] left-[20px] w-auto bg-blue-900 text-white p-4 rounded-3xl hover:shadow-xl transition-shadow duration-300 z-50 ">
             ➕ Add New Event
         </div></a>
 
         <a href="{% url 'chat' %}">
-            <div class="fixed bottom-[100px] right-[20px] w-auto bg-green-900 text-white p-4 rounded-3xl hover:shadow-xl transition-shadow duration-300 z-50">
-                Chat
+            <div class="fixed bottom-[100px] right-[20px] font-bold w-auto bg-gradient-to-r from-yellow-400 to-blue-500 text-white p-4 rounded-3xl hover:shadow-xl transition-shadow duration-300 z-50">
+                Chat 💬
             </div></a>
 
         <a href="{% url 'report' %}">
-            <div class="fixed bottom-[170px] right-[20px] w-auto bg-orange-900 text-white p-4 rounded-3xl hover:shadow-xl transition-shadow duration-300 z-50">
-                Report
+            <div class="fixed bottom-[170px] right-[20px] font-bold w-auto px-8 py-4 bg-gradient-to-r from-purple-500 via-pink-500 to-red-500 text-white text-white rounded-3xl hover:shadow-xl transition-shadow duration-300 z-50">
+                Report ✨
             </div></a>
     {% else %}
         <p>You need to <a href="{% url 'login' %}">login</a> to view this page.</p>
